--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 dash==3.2.0
 dash-leaflet==1.1.3
 dash-extensions==2.0.4
+dash-bootstrap-components==1.6.0
 plotly==6.3.1
 pandas==2.3.3
 geopandas==1.1.1
